--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.5.1",
     "axios": "^1.4.0",
+    "echarts": "^5.4.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
